--- a/index.html
+++ b/index.html
@@ -1,4 +1,14 @@
 <!DOCTYPE html>
+<style>
+    h1 {
+    color: blue;
+    background-color: yellow;
+    border: 1px solid black;
+    }
+    p {
+    color: red;
+    }
+    </style>
 <html>
 <head>
 <meta charset="utf-8">
