--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     </style>
 <html>
 <head>
+    <input value="Нажми меня" onclick="alert(Test)" type="button"></input>
 <meta charset="utf-8">
 <title>Мой эксперимент с CSS</title>
 <link rel="stylesheet" href="style.css">
@@ -19,4 +20,11 @@
 <h1>Hello World!</h1>
 <p>Это мой первый CSS-пример</p>
 </body>
+<script>
+  function calcD(a, b, c) {
+return b*b - 4*a*c;
+}
+var Test = calcD(1,2,3)
+</script>
+
 </html>
