--- a/index.html
+++ b/index.html
@@ -26,5 +26,18 @@ return b*b - 4*a*c;
 }
 var Test = calcD(1,2,3)
 </script>
+<script>
+    function calcD(a, b) {
+  return b*b - 4*a;
+  }
+  var Test = calcD(3,5)
+  </script>
 
 </html>
+<script>
+    if (confirm('Доброго времени суток, у этой страницы есть к вам вопрос, вы готовы ответить?')){
+    var name = prompt('Как вас зовут?','Введите сюда ваше имя');
+    alert("Ваше имя - "+name)
+    }
+    alert("Спасибо, что уделили время")
+    </script>
