--- a/index.html
+++ b/index.html
@@ -35,9 +35,10 @@ var Test = calcD(1,2,3)
 
 </html>
 <script>
-    if (confirm('Доброго времени суток, у этой страницы есть к вам вопрос, вы готовы ответить?')){
-    var name = prompt('Как вас зовут?','Введите сюда ваше имя');
-    alert("Ваше имя - "+name)
+    if (confirm('Доброго времени суток, у этой страницы есть к вам вопрос, вы готовы ответить или нет ?')){
+    var age = prompt('Сколька вам лет?','Введите сюда ваше возраст');
+    alert("Сколька вам лет - "+age)
     }
-    alert("Спасибо, что уделили время")
+    alert("Спасибо за уделенное время")
     </script>
+
