--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ var Test = calcD(1,2,3)
 <script>
     if (confirm('Доброго времени суток, у этой страницы есть к вам вопрос, вы готовы ответить или нет ?')){
     var age = prompt('Сколька вам лет?','Введите сюда ваше возраст');
-    alert("Сколька вам лет - "+age)
+    alert("Ваш возраст = "+age)
     }
     alert("Спасибо за уделенное время")
     </script>
