--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ var Test = calcD(1,2,3)
     function calcD(a, b) {
   return b*b - 4*a;
   }
-  var Test = calcD(3,5)
+  //var Test = calcD(3,5)
   </script>
 
 </html>
@@ -40,5 +40,13 @@ var Test = calcD(1,2,3)
     alert("Ваш возраст = "+age)
     }
     alert("Спасибо за уделенное время")
+   </script>
+<script>
+    if (confirm('Доброго времени суток, у этой страницы есть к вам вопрос, вы готовы ответить?')){
+    var name = prompt('Введите ваше имя');
+    var admin = prompt('А кто админ?');
+    alert("Ваше имя - "+admin)
+    }
+    alert("Спасибо, что уделили время")
     </script>
 
