--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     }
     </style>
 <html>
+    <img src="C:\Users\Shukhrat\Downloads\Telegram Desktop\123.jpg" alt="123.jpg">
 <head>
     <input value="Нажми меня" onclick="alert(Test)" type="button"></input>
 <meta charset="utf-8">
